--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Coffee Type | For Coffee Lovers</title>
-  <link href="https://fonts.googleapis.com/css2?family=Jost&family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jost&family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+  <nav class="navbar bg-dark">
+    <h1>The Coffee Type</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
   <header> 
-    <div class="container">
-      <nav class="navbar">
-        <h1>The Coffee Type</h1>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </div> 
+    <div class="overlay">
       <div class="welcome">
         <h1>The Coffee Type</h1>
-        <p>The Love of Coffee</p>
+        <p>For the Love of Coffee</p>
       </div>
-    
+    </div>
   </header>
 
   <section class="main">
