--- a/index.html
+++ b/index.html
@@ -42,14 +42,22 @@
       <div class="chapter-core">
         <img src="/img/cup-b-dark.jpg" alt="">
         <div class="chapter-text">
-          <h2>How Coffee is made</h2>
+          <h2>The Process</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ea porro distinctio! Optio ducimus saepe dolorem iure suscipit. Perspiciatis, accusamus.</p>
         </div>
       </div>
-      
     </div>
       
-  
+    <div class="benefits bg-dark">
+      <div class="chapter-core">
+        <img src="/img/cup-latte.jpg" alt="">
+        <div class="chapter-text">
+          <h2>Benefits & Risk of Caffeine</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ea porro distinctio! Optio ducimus saepe dolorem iure suscipit. Perspiciatis, accusamus.</p>
+        </div>
+      </div>
+    </div>
+
     <div class="menu">
       <h2>Coffee Menu</h2>
       <div class="flex-container">
