--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/landing2.css" />
     <title>Coffee Type</title>
   </head>
   <body>
@@ -66,16 +66,19 @@
 
     <!-- Header -->
     <header>
-      <div class="container" id="home">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="content">
-              <h1>COFFEE TYPE</h1>
-              <h2>What type of coffee do you love?</h2>
+      <div class="overlay">
+        <div class="container" id="home">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="content">
+                <h1>COFFEE TYPE</h1>
+                <h2>What type of coffee do you love?</h2>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      
     </header>
 
     <!-- Coffee Info -->
