--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/landing2.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Coffee Type</title>
   </head>
   <body>
